SpotWars Mechanics update